🚀 [Feature] : Dont Break The Chain (Day Streak) Fixes #517

--- a/src/app/pages/home/profile/profile.page.scss
+++ b/src/app/pages/home/profile/profile.page.scss
@@ -39,3 +39,10 @@ swiper-container {
 .badge-text {
   text-align: center;
 }
+
+ion-thumbnail {
+  --size: 75px; // Increase this value to make the thumbnail bigger
+  margin-top: 5px;
+  margin-bottom: 5px;
+  --border-radius: 10px;
+}
